# smolgrad

./: .gitignore  CMakeLists.txt  library.h
include/: Layer.h  MultiLayerPerceptron.h  Neuron.h  Value.h
src/: CMakeLists.txt  Layer.cpp  MultiLayerPerceptron.cpp  Neuron.cpp  Value.cpp
tests/: CMakeLists.txt  main.cpp  test_Layer.cpp  test_MultiLayerPerceptron.cpp  test_Neuron.cpp  test_Value.cpp
